--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,11 @@
 
 @import "bootstrap";
 
+body.settings .nav .settings,
+body.apps .nav .apps {
+  @extend .active;
+}
+
 body {
   padding-top: 60px;
 
