--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,8 +13,9 @@ html
 
           nav
             ul.nav
-              li class=NavHelper.for(:settings) = link_to 'Settings', settings_path
-              li class=NavHelper.for(:apps) = link_to 'Apps', apps_path
+              li.settings= link_to 'Settings', settings_path
+              li.awesome_app= link_to 'Awesome App', awesome_app_settings_path
+              li.great_app= link_to 'Great App', great_app_settings_path
 
     section#main-wide
       .container
