--- a/app/views/welcome/apps.html.slim
+++ b/app/views/welcome/apps.html.slim
@@ -1,4 +1,7 @@
 .page-header
   h1 Apps
 
-p This is where apps would be, or whatever.
+p Here are your apps:
+
+ul
+  li= link_to 'Awesome App', awesome_app_settings_path
