--- a/app/views/awesome_app/settings/index.html.slim
+++ b/app/views/awesome_app/settings/index.html.slim
@@ -1,5 +1,5 @@
-.page-header
-  h1 Awesome App Settings
+= content_for(:subhead) do
+  = " Settings"
 
 form.form-horizontal method="GET"
   .control-group
