--- a/app/views/great_app/settings/index.html.slim
+++ b/app/views/great_app/settings/index.html.slim
@@ -1,5 +1,5 @@
-.page-header
-  h1 Great App Settings
+= content_for(:subhead) do
+  = " Settings"
 
 form.form-horizontal method="GET"
   .control-group
