--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,7 +15,8 @@
 @import "bootstrap";
 
 body.settings .nav .settings,
-body.apps .nav .apps {
+body.awesome_app .nav .awesome_app,
+body.great_app .nav .great_app {
   @extend .active;
 }
 
