--- a/app/views/layouts/great_app.html.slim
+++ b/app/views/layouts/great_app.html.slim
@@ -6,8 +6,8 @@
         small= yield(:subhead)
   .row
     .span3
-      ul.nav.nav-tabs.nav-stacked
-        li= link_to 'Settings', great_app_settings_path
+      ul.sub.nav.nav-tabs.nav-stacked
+        li.settings= link_to 'Settings', great_app_settings_path
 
     .span9
       = yield
