--- a/app/views/layouts/awesome_app.html.slim
+++ b/app/views/layouts/awesome_app.html.slim
@@ -6,9 +6,9 @@
         small= yield(:subhead)
   .row
     .span3
-      ul.nav.nav-tabs.nav-stacked
-        li= link_to 'Settings', awesome_app_settings_path
-        li= link_to 'History', awesome_app_history_path
+      ul.sub.nav.nav-tabs.nav-stacked
+        li.settings= link_to 'Settings', awesome_app_settings_path
+        li.history= link_to 'History', awesome_app_history_path
 
     .span9
       = yield
