More useful footer.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -38,4 +38,7 @@ html
     section#footer_wide
       .container
         footer
-            p.muted A footer!
+          p.muted
+            ' Check me out on
+            a href="http://github.com/benhamill/nav_helper_test" Github
+            | .
